OpenSTA Timing Analyzer Release Notes
---------------------------------------------

This file summarizes user visible changes for each release.

Release 2.3.2 2022/07/03
-------------------------

The liberty default_wire_load is now ignored. You must explicitly set the wire load
model with the set_wire_load_model command to apply wire load model based parasitics.

Release 2.3.1 2020/11/08
-------------------------

The read_sdf command no longer supports the -analysis_type, -type, -min_type,
and -max_type arguments. Use the set_operating_conditions -analysis_type
command to set the analysis type before read_sdf.

Release 2.2.0 2020/07/18
-------------------------

The report_units reports the current units used by commands.

  report_units

The report_check_types -min_fanout -max_fanout -max_capacitance -min_capacitance

  report_check_types [-min_fanout] [-max_fanout] [-max_capacitance] [-min_capacitance]


The insert_buffer command is no longer supported.

Release 2.0.0 2018/09/28
-------------------------

The command line options have changed to the following:

  -help              show help and exit
  -version           show version and exit
  -no_init           do not read .sta init file
  -threads count|max use count threads
  -no_splash         do not show the license splash at startup
  -exit              exit after reading cmd_file
  cmd_file           source cmd_file


....

Builds using Autotools/configure are no longer supported.
Use CMake as documented in README.md.

....

The check_timing command -no_output_delay checks output ports for
set_output_delay.

....

The report_power command reports the power consumption of the design
or a specific instance.

  report_power [-instances inst] [-digits digits] [> filename] [>> filename]

The internal, switching, leakage and total power are reported. Design
power is reported separately for combinational, sequential, macro and
pad groups.

Use -instances to report power for a specific instance.
